--- a/deps/Dockerfile.ovm-tarball
+++ b/deps/Dockerfile.ovm-tarball
@@ -26,7 +26,10 @@ COPY --chown=uke \
 
 # TODO: Could make a wedges out of Python 2.7, and all shells in spec-bin
 
-COPY Python-2.7.13/ /home/uke/tmp/Python-2.7.13/
+# Copy into current directory
+COPY --chown=uke \
+  Python-2.7.13/ \
+  /home/uke/tmp/Python-2.7.13/
 
 COPY build/common.sh /home/uke/tmp/build/common.sh
 COPY deps/from-tar.sh /home/uke/tmp/deps/from-tar.sh
@@ -34,6 +37,7 @@ COPY deps/from-tar.sh /home/uke/tmp/deps/from-tar.sh
 # For bootstrapping the OVM build
 RUN deps/from-tar.sh layer-cpython
 
+COPY devtools/run-task.sh /home/uke/tmp/devtools/run-task.sh
 COPY test/spec-common.sh /home/uke/tmp/test/spec-common.sh
 COPY test/spec-bin.sh /home/uke/tmp/test/spec-bin.sh
 
