[soil] Add cmark wedge to Dockerfile.clang
The 'cpp-coverage' code task now does build/py.sh all, not build/py.sh
minimal

The minimal dev build might be DELETED altogether, but if it stays, it
won't be valid for C++.

That is, 'ninja' will require 'build/py.sh all'

- install-wedges-py will build python2 as well

--- a/deps/Dockerfile.clang
+++ b/deps/Dockerfile.clang
@@ -18,6 +18,11 @@ USER uke
 COPY --chown=uke _cache/clang+llvm-14.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz \
   /home/uke/oil_DEPS/clang+llvm-14.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
 
+# cmark
+COPY --chown=uke \
+  _build/wedge/binary/oils-for-unix.org/pkg/cmark/0.29.0 \
+  /wedge/oils-for-unix.org/pkg/cmark/0.29.0
+
 # re2c
 COPY --chown=uke \
   _build/wedge/binary/oils-for-unix.org/pkg/re2c/3.0 \
