--- a/.builds/worker2.yml
+++ b/.builds/worker2.yml
@@ -21,6 +21,18 @@ tasks:
       cd oil
       soil/host-shim.sh mount-perms $PWD
 
+  - cpp-tarball: |
+      cd oil
+      soil/host-shim.sh run-job-uke podman $PWD cpp-tarball
+
+  - publish-cpp-tarball: |
+      cd oil
+      soil/sourcehut.sh publish-html-assuming-ssh-key cpp-tarball
+
+  - job-reset-1: |
+      cd oil
+      soil/host-shim.sh job-reset
+
   - other-tests: |
       cd oil
       soil/host-shim.sh run-job-uke podman $PWD other-tests
@@ -29,40 +41,6 @@ tasks:
       cd oil
       soil/sourcehut.sh publish-html-assuming-ssh-key other-tests
 
-  #- cpp-small: |
-  #    cd oil
-  #    soil/host-shim.sh run-job-uke podman $PWD cpp-small
-
-  #- publish-cpp-small: |
-  #    cd oil
-  #    soil/sourcehut.sh publish-html-assuming-ssh-key
-
-  #- job-reset-1: |
-  #    cd oil
-  #    soil/host-shim.sh job-reset
-
-  #- cpp-spec: |
-  #    cd oil
-  #    soil/host-shim.sh run-job-uke podman $PWD cpp-spec
-
-  ## Relies on SSH key, so do it outside the container
-  #- publish-cpp-spec: |
-  #    cd oil
-  #    soil/sourcehut.sh publish-html-assuming-ssh-key
-
-  #- job-reset-2: |
-  #    cd oil
-  #    soil/host-shim.sh job-reset
-
-  #- benchmarks: |
-  #    cd oil
-  #    soil/host-shim.sh run-job-uke podman $PWD benchmarks
-
-  #- publish-benchmarks: |
-  #    cd oil
-  #    soil/sourcehut.sh publish-html-assuming-ssh-key
-  
   - did-all-succeed: |
       cd oil
-      soil/host-shim.sh did-all-succeed other-tests
-      #soil/host-shim.sh did-all-succeed cpp-small cpp-spec benchmarks
+      soil/host-shim.sh did-all-succeed cpp-tarball other-tests
