--- a/.builds/worker3.yml
+++ b/.builds/worker3.yml
@@ -1,7 +1,13 @@
-# Debian bullseye has podman
+# Debian Bookworm asserts that the dev setup doesn't depend on Python 2!
+# Rather, it builds a Python 2 wedge.
+# Doesn't work with Soil right now!
+
+#image: debian/bookworm
 image: debian/bullseye
+
 packages:
   # for running soil on the host
+  #- python3
   - python2
   - time
   - zip
