[soil] Some fixes for dev-setup2, testing Fedora
- benchmarks/time_.py - can run with python3 as well as python2
- Fix list-jobs to exclude dev-setup2

--- a/.builds/worker1.yml
+++ b/.builds/worker1.yml
@@ -3,6 +3,7 @@ image: debian/bullseye
 packages:
   # for running soil on the host
   - python2
+  #- python3
   - time
   - zip
   # podman and its missing dependencies
