[soil] Can run without Python 2
- dummy task:
  - works with Ubuntu 22 with Python 3 only - github-actions
  - works with Debian bookworm with Python 3 only - sourcehut

The "client" portions all run with Python 3 now:

- collect_json.py -> python3
  - it's only used OUTSIDE the container, not inside
- doctools/html_head.py -> python 2 and 3
- web/table/csv2html.py -> python 2 and 3

Porting issues:

- cStringIO.StringIO -> io.BytesIO
- cgi.escape -> html.escape
- xrange -> range

--- a/.builds/worker1.yml
+++ b/.builds/worker1.yml
@@ -1,9 +1,10 @@
 # Debian bullseye has podman
-image: debian/bullseye
+#image: debian/bullseye
+image: debian/bookworm
 packages:
   # for running soil on the host
-  - python2
-  #- python3
+  #- python2
+  - python3
   - time
   - zip
   # podman and its missing dependencies
