--- a/.builds/worker2.yml
+++ b/.builds/worker2.yml
@@ -1,8 +1,7 @@
-# Debian bullseye has podman
-image: debian/bullseye
+image: debian/bookworm
 packages:
   # for running soil on the host
-  - python2
+  - python3
   - time
   - zip
   # podman and its missing dependencies
