[github-actions] pea task -> podman
We don't need to install podman, because Github Actions already has it.

https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2204-Readme.md

--- a/.github/workflows/all-builds.yml
+++ b/.github/workflows/all-builds.yml
@@ -78,11 +78,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: install-podman
-        run: |
-          soil/github-actions.sh install-podman
-
-      # Runs inside container!
+        # UPGRADED to podman
       - name: dummy
         run: |
           soil/github-actions.sh run-job dummy podman
@@ -141,9 +137,10 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
+        # UPGRADED to podman
       - name: pea
         run: |
-          soil/github-actions.sh run-job pea
+          soil/github-actions.sh run-job pea podman
 
       - name: publish-html
         env:
