[build/deps] Fix field sorting, and add xargs slot
Use GNU xargs for --process-slot-var.

csv2html - columns with strftime formats are marked as
'case-insensitive', not 'number'.

--- a/.builds/worker6.yml
+++ b/.builds/worker6.yml
@@ -7,6 +7,8 @@ packages:
   - zip
     # for SSH debugging!
   - vim
+    # GNU xargs instead of busybox xargs, for --process-slot-var
+  - findutils
   # - time  # causes an error, don't need it
 
 secrets:
