[github-actions] Add explicit dependencies on cpp-tarball task
This duplicates what's in soil/worker.sh a bit.  But it should make the
build more correct.

--- a/.github/workflows/all-builds.yml
+++ b/.github/workflows/all-builds.yml
@@ -35,6 +35,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       REPO_ROOT: ${{ github.workspace }}
+    needs: ['cpp-tarball']
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -191,6 +192,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       REPO_ROOT: ${{ github.workspace }}
+    needs: ['cpp-tarball']
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -331,6 +333,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       REPO_ROOT: ${{ github.workspace }}
+    needs: ['cpp-tarball']
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
