--- a/.builds/worker2.yml
+++ b/.builds/worker2.yml
@@ -32,14 +32,23 @@ tasks:
       cd oil
       soil/host-shim.sh job-reset
 
-  - other-tests: |
+  - cpp-spec: |
       cd oil
-      soil/host-shim.sh run-job-uke podman $PWD other-tests
+      soil/host-shim.sh run-job-uke podman $PWD cpp-spec
 
-  - publish-other-tests: |
+  - publish-cpp-spec: |
       cd oil
-      soil/sourcehut.sh publish-html-assuming-ssh-key other-tests
+      soil/sourcehut.sh publish-html-assuming-ssh-key cpp-spec
+
+      #- other-tests: |
+      #    cd oil
+      #    soil/host-shim.sh run-job-uke podman $PWD other-tests
+
+      #- publish-other-tests: |
+      #    cd oil
+      #    soil/sourcehut.sh publish-html-assuming-ssh-key other-tests
 
   - did-all-succeed: |
       cd oil
-      soil/host-shim.sh did-all-succeed cpp-tarball other-tests
+      #soil/host-shim.sh did-all-succeed cpp-tarball other-tests
+      soil/host-shim.sh did-all-succeed cpp-tarball cpp-spec
