[github-actions] Apply ASAN workaround to interactive job

--- a/.github/workflows/all-builds.yml
+++ b/.github/workflows/all-builds.yml
@@ -119,6 +119,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
+      - name: Fix kernel mmap rnd bits
+      # Asan in llvm 14 provided in ubuntu 22.04 is incompatible with
+      # high-entropy ASLR in much newer kernels that GitHub runners are
+      # using leading to random crashes: https://reviews.llvm.org/D148280
+        run: sudo sysctl vm.mmap_rnd_bits=28
+
       - name: interactive
         run: |
           soil/github-actions.sh run-job interactive
