[sourcehut] Run benchmarks task
We have to run it alone, so we don't run out of disk.

Change precision for osh-runtime Max RSS table.

--- a/.builds/worker2.yml
+++ b/.builds/worker2.yml
@@ -20,25 +20,33 @@ tasks:
       cd oil
       soil/host-shim.sh mount-perms $PWD
 
-  - cpp-tarball: |
-      cd oil
-      soil/host-shim.sh run-job-uke podman $PWD cpp-tarball
+      #- cpp-tarball: |
+      #cd oil
+      #soil/host-shim.sh run-job-uke podman $PWD cpp-tarball
 
-  - publish-cpp-tarball: |
-      cd oil
-      soil/sourcehut.sh publish-html-assuming-ssh-key cpp-tarball
+      #- publish-cpp-tarball: |
+      #cd oil
+      #soil/sourcehut.sh publish-html-assuming-ssh-key cpp-tarball
 
-  - job-reset-1: |
-      cd oil
-      soil/host-shim.sh job-reset
+      #- job-reset-1: |
+      #cd oil
+      #soil/host-shim.sh job-reset
 
-  - cpp-spec: |
+  - benchmarks: |
       cd oil
-      soil/host-shim.sh run-job-uke podman $PWD cpp-spec
+      soil/host-shim.sh run-job-uke podman $PWD benchmarks
 
-  - publish-cpp-spec: |
+  - publish-benchmarks: |
       cd oil
-      soil/sourcehut.sh publish-html-assuming-ssh-key cpp-spec
+      soil/sourcehut.sh publish-html-assuming-ssh-key benchmarks
+
+      #- cpp-spec: |
+      #cd oil
+      #soil/host-shim.sh run-job-uke podman $PWD cpp-spec
+
+      #- publish-cpp-spec: |
+      #cd oil
+      #soil/sourcehut.sh publish-html-assuming-ssh-key cpp-spec
 
       #- other-tests: |
       #    cd oil
@@ -51,4 +59,6 @@ tasks:
   - did-all-succeed: |
       cd oil
       #soil/host-shim.sh did-all-succeed cpp-tarball other-tests
-      soil/host-shim.sh did-all-succeed cpp-tarball cpp-spec
+      #soil/host-shim.sh did-all-succeed cpp-tarball cpp-spec
+      #soil/host-shim.sh did-all-succeed cpp-tarball benchmarks
+      soil/host-shim.sh did-all-succeed benchmarks
