--- a/.builds/worker2.yml
+++ b/.builds/worker2.yml
@@ -20,17 +20,17 @@ tasks:
       cd oil
       soil/host-shim.sh mount-perms $PWD
 
-      #- cpp-tarball: |
-      #cd oil
-      #soil/host-shim.sh run-job-uke podman $PWD cpp-tarball
+  - cpp-tarball: |
+      cd oil
+      soil/host-shim.sh run-job-uke podman $PWD cpp-tarball
 
-      #- publish-cpp-tarball: |
-      #cd oil
-      #soil/sourcehut.sh publish-html-assuming-ssh-key cpp-tarball
+  - publish-cpp-tarball: |
+      cd oil
+      soil/sourcehut.sh publish-html-assuming-ssh-key cpp-tarball
 
-      #- job-reset-1: |
-      #cd oil
-      #soil/host-shim.sh job-reset
+  - job-reset-1: |
+      cd oil
+      soil/host-shim.sh job-reset
 
   - benchmarks: |
       cd oil
@@ -58,7 +58,4 @@ tasks:
 
   - did-all-succeed: |
       cd oil
-      #soil/host-shim.sh did-all-succeed cpp-tarball other-tests
-      #soil/host-shim.sh did-all-succeed cpp-tarball cpp-spec
-      #soil/host-shim.sh did-all-succeed cpp-tarball benchmarks
-      soil/host-shim.sh did-all-succeed benchmarks
+      soil/host-shim.sh did-all-succeed cpp-tarball benchmarks
