[soil/benchmarks2] Fix everything except uftrace, under debian-12
- uftrace is still disabled -- getting a Python 3.11 error now
- re-enable R reports - these build with debian-12
- Use python2 wedge
  - time-tsv3 -> time-tsv, since we have python2

Unrelated:

- spec test metadata fixes

--- a/deps/Dockerfile.soil-benchmarks2
+++ b/deps/Dockerfile.soil-benchmarks2
@@ -13,6 +13,13 @@ USER uke
 
 # Copy pre-built wedges
 
+# debian-10 should work?
+COPY --chown=uke \
+  _build/wedge/binary/oils-for-unix.org/pkg/cmark/0.29.0 \
+  /wedge/oils-for-unix.org/pkg/cmark/0.29.0
+
+
+# debian-12
 COPY --chown=uke \
   _build/wedge/binary/oils-for-unix.org/pkg/uftrace/0.13 \
   /wedge/oils-for-unix.org/pkg/uftrace/0.13
@@ -20,5 +27,6 @@ COPY --chown=uke \
 COPY --chown=uke \
   _build/wedge/relative/oils-for-unix.org/pkg/R-libs/2023-04-18 \
   /home/uke/wedge/oils-for-unix.org/pkg/R-libs/2023-04-18
+
 
 CMD ["sh", "-c", "echo 'hello from oilshell/soil-benchmarks2'"]
