[soil/ovm-tarball] Use wedges instead of test/spec-bin.sh
- Fix the yash WEDGE
  - with new functions wedge-{make,install}-from-source-dir
- build/deps.sh install-wedges-fast vs extra
  - contributors do it fast
  - Soil does uftrace and more - could do souffle too

[spec/prompt] new bash build fixes these for some reason

--- a/deps/Dockerfile.soil-ovm-tarball
+++ b/deps/Dockerfile.soil-ovm-tarball
@@ -24,9 +24,38 @@ COPY --chown=uke \
   _build/wedge/binary/oils-for-unix.org/pkg/re2c/3.0 \
   /wedge/oils-for-unix.org/pkg/re2c/3.0
 
-# TODO: copy shells for spec tests here
+# Shells for spec tests
 
-# TODO: Could make a wedges out of Python 2.7
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/bash/4.4 \
+  /home/uke/wedge/oils-for-unix.org/pkg/bash/4.4
+
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/bash/5.2 \
+  /home/uke/wedge/oils-for-unix.org/pkg/bash/5.2
+
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/busybox/1.35.0 \
+  /home/uke/wedge/oils-for-unix.org/pkg/busybox/1.35.0
+
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/dash/0.5.10.2 \
+  /home/uke/wedge/oils-for-unix.org/pkg/dash/0.5.10.2
+
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/mksh/R52c \
+  /home/uke/wedge/oils-for-unix.org/pkg/mksh/R52c
+
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/yash/2.49 \
+  /home/uke/wedge/oils-for-unix.org/pkg/yash/2.49
+
+COPY --chown=uke \
+  _build/wedge/relative/oils-for-unix.org/pkg/zsh/5.1.1 \
+  /home/uke/wedge/oils-for-unix.org/pkg/zsh/5.1.1
+
+# Should we use the Python 2.7.18 wedge instead of our own dir?  Probably not,
+# because it's
 
 # Copy into current directory
 COPY --chown=uke \
@@ -39,10 +68,10 @@ COPY deps/from-tar.sh /home/uke/tmp/deps/from-tar.sh
 # For bootstrapping the OVM build
 RUN deps/from-tar.sh layer-cpython
 
-COPY devtools/run-task.sh /home/uke/tmp/devtools/run-task.sh
-COPY test/spec-common.sh /home/uke/tmp/test/spec-common.sh
-COPY test/spec-bin.sh /home/uke/tmp/test/spec-bin.sh
+#COPY devtools/run-task.sh /home/uke/tmp/devtools/run-task.sh
+#COPY test/spec-common.sh /home/uke/tmp/test/spec-common.sh
+#COPY test/spec-bin.sh /home/uke/tmp/test/spec-bin.sh
 
-RUN test/spec-bin.sh all-steps
+#RUN test/spec-bin.sh all-steps
 
 CMD ["sh", "-c", "echo 'hello from oilshell/ovm-tarball'"]
