--- a/.github/workflows/all-builds.yml
+++ b/.github/workflows/all-builds.yml
@@ -48,6 +48,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit raw-vm T
 
@@ -67,6 +68,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit dev-setup-debian T
 
@@ -88,6 +90,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit dummy T
 
@@ -108,6 +111,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit dev-minimal T
 
@@ -133,6 +137,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit interactive T
 
@@ -153,6 +158,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit pea T
 
@@ -172,6 +178,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit other-tests T
 
@@ -191,6 +198,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit ovm-tarball T
 
@@ -211,6 +219,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit app-tests T
 
@@ -230,6 +239,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit cpp-coverage T
 
@@ -249,6 +259,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit benchmarks T
 
@@ -269,6 +280,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit bloaty T
 
@@ -289,6 +301,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit benchmarks2 T
 
@@ -314,6 +327,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit cpp-small T
 
@@ -340,12 +354,14 @@ jobs:
         env:
           # auth for web server
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-cpp-tarball
 
       - name: publish-html
         env:
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit cpp-tarball T
 
@@ -371,6 +387,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit cpp-spec T
 
@@ -391,6 +408,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           soil/github-actions.sh publish-and-exit wild T
 
@@ -415,6 +433,7 @@ jobs:
         env:
           # for deploying to dashboard
           TOIL_KEY: ${{ secrets.TOIL_KEY }}
+          MB_OILS_KEY: ${{ secrets.MB_OILS_KEY }}
         run: |
           # NOTE: does not publish to status API
           soil/github-actions.sh publish-and-exit maybe-merge
