--- a/.builds/worker3.yml
+++ b/.builds/worker3.yml
@@ -23,40 +23,40 @@ secrets:
 
 tasks:
   - dev-setup-debian: |
-      cd oil
+      cd oils
       soil/worker.sh JOB-dev-setup-debian
 
   - publish-dev-setup-debian: |
-      cd oil
+      cd oils
       soil/sourcehut.sh publish-html-assuming-ssh-key dev-setup-debian
 
   #- mount-perms: |
-  #    cd oil
+  #    cd oils
   #    soil/host-shim.sh mount-perms $PWD
 
   #- dev-minimal: |
-  #    cd oil
+  #    cd oils
   #    soil/host-shim.sh run-job-uke podman $PWD dev-minimal
 
   ## Relies on SSH key, so do it outside the container
   #- publish-dev-minimal: |
-  #    cd oil
+  #    cd oils
   #    soil/sourcehut.sh publish-html-assuming-ssh-key dev-minimal
 
   # Outside container
   #- job-reset: |
-  #    cd oil
+  #    cd oils
   #    soil/host-shim.sh job-reset
 
   #- other-tests: |
-  #    cd oil
+  #    cd oils
   #    soil/host-shim.sh run-job-uke podman $PWD other-tests
 
   #- publish-other-tests: |
-  #    cd oil
+  #    cd oils
   #    soil/sourcehut.sh publish-html-assuming-ssh-key
 
   #  - did-all-succeed: |
-  #      cd oil
+  #      cd oils
   #      soil/host-shim.sh did-all-succeed dev-minimal
   #      #soil/host-shim.sh did-all-succeed dev-minimal other-tests
