--- a/.builds/worker6.yml
+++ b/.builds/worker6.yml
@@ -16,13 +16,13 @@ secrets:
 
 tasks:
   - dev-setup-alpine: |
-      cd oil
+      cd oils
       soil/worker.sh JOB-dev-setup-alpine
 
   - publish-dev-setup-alpine: |
-      cd oil
+      cd oils
       soil/sourcehut.sh publish-html-assuming-ssh-key dev-setup-alpine
 
   - did-all-succeed: |
-      cd oil
+      cd oils
       soil/host-shim.sh did-all-succeed dev-setup-alpine
